vendor/mico-2.3.2/test/idl/error/case19.idl

/*
 * Bad #pragma directive
 */

#pragma foobar "omg.org"

typedef string Identifier;

